# TDDforEmbeddedSystem

./: .gitignore  CMakeLists.txt  README.md  ToDo.md  config.h.in~  configure.ac  memo.md
bad_example/: CMakeLists.txt  bad_example.c
evdev_test/: CMakeLists.txt
evdev_test/test/: evdev_sample_test.cpp
led_controller/: CMakeLists.txt  ToDo.md
led_controller/src/: active_object_engine.c  active_object_engine.h  event_detector.c  event_detector.h  key_input_event.c  key_input_event.h  key_input_event_private.h  konami_command.c  led_driver.c  led_driver.h  main.c  three_times_in_two_sec.c  timeout_detector.c  timeout_detector.h
led_controller/src/command/: action_on_trigger.c  action_on_trigger.h  command.c  command.h  count_total.c  count_total.h  detect_chain.c  detect_chain.h  detect_command.cpp  detect_command.h  halt_engine.c  halt_engine.h  led_operator_factory.c  led_operator_factory.h  operation_on_detection.c  operation_on_detection.h
led_controller/src/detector/: event_detector.c  event_detector.h  key_input_detector.c  key_input_detector.h  key_input_event.c  timeout_detector.c  timeout_detector.h
led_controller/src/drivers/: led_driver.c
led_controller/src/operator/: led_operator_factory.c  led_operator_factory.h  operator.c  operator.h
led_controller/src/os/: io.c  io.h  time.c  time.h
led_controller/src/utils/: logger.c  logger.h
led_controller/test/: active_object_test.cpp  command_test.cpp  key_input_event_test.cpp  led_controller_test.cpp  led_driver_test.cpp  led_operator_test.cpp  timer_event_test.cpp
led_controller/test/mocks/libs/: mock_libevdev.h
led_controller/test/mocks/os/: mock_io.cpp  mock_io.h  mock_time.h
led_controller/test/mocks/utils/: logger_spy.c  logger_spy.h
src/: Makefile.am  main.c
test/: Makefile.am  evdev_sample_test.cpp
